--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
 			<artifactId>weld-core-impl</artifactId>
 			<version>2.2.9.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version><!--$NO-MVN-MAN-VER$-->
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
