MockEmailService com Logger. Padrões Strategy e Template Method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=test
+
+default.sender=robertspfc10@gmail.com
+default.recipient=robert.suporteweb@gmail.com
