--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 			<version>8.0.18</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>1.5.19.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
