--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,11 @@
 # datasource
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # jpa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
