--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=robertspfc10@gmail.com
-default.recipient=robert.suporteweb@gmail.com
+default.sender=
+default.recipient=
