--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<version>1.5.19.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
