--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,31 @@
 # datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Database Configuration
+#spring.datasource.initialization-mode=always
+#spring.datasource.platform=dev
+#spring.datasource.url=jdbc:postgresql://${CURSOMC_DB_POSTGRESQL:localhost}:${CURSOMC_DB_PORT:5432}/${CURSOMC_DB_DATABASE:curso_spring}
+#spring.datasource.username=${CURSOMC_DB_USERNAME:postgres}
+#spring.datasource.password=${CURSOMC_DB_PASSWORD:admin}
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/curso_spring
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # jpa
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # email
 spring.mail.host=smtp.gmail.com
@@ -20,3 +37,4 @@ spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFa
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.ssl.enable = true
+
