--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 # datasource
-#spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Database Configuration
 #spring.datasource.initialization-mode=always
@@ -11,26 +11,26 @@
 #spring.datasource.username=${CURSOMC_DB_USERNAME:postgres}
 #spring.datasource.password=${CURSOMC_DB_PASSWORD:admin}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/curso_spring
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/curso_spring
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
 
 # jpa
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=robertspfc10@gmail.com
-spring.mail.password=
+spring.mail.password=robertspfc
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
