--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.sender=robertspfc10@gmail.com
 default.recipient=robert.suporteweb@gmail.com
+
+jwt.secret=assinarToken
+jwt.expiration=60000 
