--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,12 @@ default.sender=robertspfc10@gmail.com
 default.recipient=robert.suporteweb@gmail.com
 
 jwt.secret=assinarToken
-jwt.expiration=60000 
+jwt.expiration=86400000
+
+aws.access.key.id=
+aws.secret.access.key=
+s3.bucket=aws-arquivos-teste
+s3.region=us-east-1
+
+path.file.local=/home/jsrobert/Imagens/robert.jpg
+ 
