Usando padrão de nomes para imagens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ aws.secret.access.key=
 s3.bucket=aws-arquivos-teste
 s3.region=us-east-1
 
-path.file.local=/home/jsrobert/Imagens/robert.jpg
+img.prefix.client.profile=cp
+
+
  
